--- a/release/vue-todo.html
+++ b/release/vue-todo.html
@@ -14,7 +14,7 @@
 <meta http-equiv="Expires" content="0" />
         <title>todolist-vue</title>
     
-    <link rel="stylesheet" href="http://cdn.sailengsi.com/other/bs/3.3.5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/todolist.css" />
 </head>
     <body>
@@ -68,8 +68,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    
+        </div>    
 <script src="libs/store/store.js"></script>
 <script src="libs/vue/vue.js"></script>
 <script src="js/vue-app.js"></script>
