--- a/release/index.html
+++ b/release/index.html
@@ -14,7 +14,7 @@
 <meta http-equiv="Expires" content="0" />
         <title>todolist-jquery</title>
     
-    <link rel="stylesheet" href="http://cdn.sailengsi.com/other/bs/3.3.5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/todolist.css" />
 </head>
     <body>
@@ -61,8 +61,7 @@
     		</div>
     	</div>
 
-        <p class="todo-tip">this is error info</p>
-    
+        <p class="todo-tip">this is error info</p>    
 <script src="libs/store/store.min.js"></script>
 <script src="libs/jquery/jquery.min.js"></script>
 <script src="js/app.js"></script>
