--- a/release/react-todo.html
+++ b/release/react-todo.html
@@ -14,12 +14,11 @@
 <meta http-equiv="Expires" content="0" />
         <title>todolist-react</title>
     
-    <link rel="stylesheet" href="http://cdn.sailengsi.com/other/bs/3.3.5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/todolist.css" />
 </head>
     <body>
-    	<div id="managerTodo" class="container"></div>
-    
+    	<div id="managerTodo" class="container"></div>    
 <script src="libs/store/store.js"></script>
 <script src="libs/react/react.js"></script>
 <script src="libs/react/react-dom.js"></script>
